# asr-data

./: .gitignore  Cargo.toml  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.github/workflows/: release.yml
asr_data/: __init__.py  __init__.pyi  _native.pyi  _types.py  annotation.py  annotation.pyi
assets/wetext/: README.md  full_to_half.fst  tagger.fst  traditional_to_simple.fst
docs/superpowers/plans/: 2026-07-16-channel-timelines.md  2026-07-22-audio-source-load-stream-options.md  2026-07-22-project-module-reorganization.md  2026-07-22-remove-extract-audio.md  2026-07-23-annotation-overlap-schema-v6.md  2026-07-23-normalize-zh.md
docs/superpowers/specs/: 2026-07-16-channel-timelines-design.md  2026-07-21-readme-refresh-design.md  2026-07-22-audio-source-load-stream-options-design.md  2026-07-22-project-module-reorganization-design.md  2026-07-22-remove-extract-audio-design.md  2026-07-23-annotation-overlap-schema-v6-design.md  2026-07-23-normalize-zh-design.md
scripts/: release.sh
src/: dataset.rs  db.rs  doc.rs  evaluation.rs  extract_audio.rs  fasr.rs  lib.rs  media.rs  python.rs  record.rs  segment.rs  stream.rs  timeline.rs  token.rs  utils.rs  waveform.rs
src/audio/: chunking.rs  data.rs  decode.rs  mod.rs  normalize.rs  resample.rs  source.rs  stream.rs  waveform.rs
src/db/: mod.rs  query.rs  schema.rs
src/doc/: legacy.rs  mod.rs
src/metrics/: cer.rs  mod.rs  normalization.rs
src/python/: annotation.rs  audio.rs  common.rs  db.rs  doc.rs  evaluation.rs  metrics.rs  mod.rs  timeline.rs
src/timeline/: annotation.rs  data.rs  evaluation.rs  mod.rs  segment.rs  token.rs
tests/: data_behaviour.rs  dataset_evaluation.rs  db_timestamps.rs  public_api.rs  test_bindings.py
