[project]
name = "asr-data"
version = "0.1.1"
description = "Python bindings for the ASR audio data model"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
]

[tool.maturin]
manifest-path = "Cargo.toml"
module-name = "asr_data._native"
python-source = "."
features = ["python-bindings"]
profile = "release"
strip = true

[[tool.uv.index]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[build-system]
requires = ["maturin>=1.9,<2"]
build-backend = "maturin"

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "maturin>=1.14.1",
    "vad-burn>=0.1.3",
]
